# osql_parser

./: Cargo.toml  LICENCE  flake.nix
lsp/: Cargo.toml
lsp/src/: definition.rs  main.rs  rpc.rs
lsp/src/lsp/: diagnostics.rs  initialize.rs  mod.rs  text_document.rs
osql_parser_derive/: Cargo.toml
osql_parser_derive/src/: lib.rs
src/: ast.rs  lexer.rs  lib.rs  main.rs  oir.rs  parser.rs  test.sql  token.rs
