[package]
name = "lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
osql_parser = { path = "../" }
serde_json = "1.0.142"
ecow = { version = "0.2.6", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["from", "display"] }
log = "0.4.27"
flexi_logger = "0.31.2"
